--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4900,7 +4900,7 @@ locations to galaxies in a catalog generated from the survey.
 \medskip
 There are two ways to identify mis-matched hosts from the data files.
 First is an explicit flag, {\tt SIM\_ZFLAG=4} 
-(see \S?? for details).
+(see \S~\ref{sss:redshift_flag} for details).
 Second, {\tt REDSHIFT\_FINAL - SIM\_REDSHIFT\_CMB} should 
 show a tail from wrong-host matches.
 In the output tables (SNANA,FITRES) from snana-analysis,
@@ -6421,7 +6421,7 @@ it simply provides additional information to the analysis programs.
 
 
 % ------------------------------------
-%  \clearpage
+  \clearpage
    \subsubsection{Source of Each Redshift}
    \label{sss:redshift_flag}
 % ------------------------------------
