add data structure table to Sec 2

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -323,11 +323,66 @@ format.
 Large data \& sim samples should use FITS format because
 it is much more compact and much faster to read.
 With TEXT format, each event is written to a separate ASCII file.
-With FITS format, there are two FITS files: a summary HEAD file
+With FITS format (Fig.~\ref{fig:data_format}), 
+there are two FITS files: a summary HEAD file
 with a one-row summary per event, and a PHOT file with the
 light curves. For fast reading, the HEAD file includes pointers
 to the PHOT table, so do not catenate FITS files without updating
 these pointers.
+
+\begin{figure} [ht] 
+\begin{center}
+\begin{Verbatim}[frame=single]
+HEAD file:   
+  variable name              description
+# ---------------------------------------------------------------------
+* SNID                      integer or character ID
+* RA,DEC                    sky coordinates (degrees)
+* NOBS                      number of obs (all bands)
+* PTROBS_MIN                points to 1st light curve obs in PHOT file
+* PTROBS_MAX                points to last light curve obs
+* MWEBV[_ERR]               E(B-V) for Milky way
+* REDSHIFT_HELIO[_ERR]      best heliocentric redshift;
+                            zSpec if available; else zPhot; else -9
+* REDSHIFT_FINAL[_ERR]      best CMB redshift
+* VPEC_[ERR]                pec velocity (km/sec) and error on correction
+* HOSTGAL_NMATCH            number of host matches with DDLR < 4
+* HOSTGAL_NMATCH2           number of host matches with DDLR < 7
+* HOSTGAL_RA                R.A. (deg) for center of host
+* HOSTGAL_DEC               declination (deg) for center of host
+* HOSTGAL_SNSEP             transient-host separation, arcsec
+* HOSTGAL_SPECZ[_ERR]       zSpec of host  (-9 -> not available)
+* HOSTGAL_PHOTOZ[_ERR]      zphot (mean of PDF); -9 -> not available
+* HOSTGAL_ZPHOT_Q[PPP]      redshift containing PPP% of zPDF prob
+* HOSTGAL_MAG_[band]        host mags for band=u,g,r,i,z,Y
+* HOSTGAL_MAGERR_[band]     uncertainty on above mags
+    [Each hostgal_xxx has hostgal2_xxx for 2nd host-match;
+     -999 indicates no 2nd host; else values are filled.
+     First listed host has smallest DDLR and may not be the true host]
+    
+* SIM_TYPE_INDEX            true integer transient type (e.g., 1 for SNIa)
+* SIM_[SSS]                 true sim property SSS
+
+PHOT file:
+* MJD                      modified Julian date (-777 -> end of light curve)
+* BAND                     e.g.,  u,g,r,i,z
+* PHOTFLAG                 bit-mask of information (check data README)
+* FLUXCAL                  calibrated flux : mag = 27.5 - 2.5*log10(FLUXCAL)
+* FLUXCALERR               Poisson uncertainty on FLUXCAL; sky+galaxy+source
+* SIM_MAGOBS               true model mag
+     image properties
+* PSF_SIG1                 PSF Gauss sigma, pixels
+* SKY_SIG                  sky noise (ADU/pixel)
+* ZEROPT                   image zero point
+* GAIN                     N_photoelectron/ADU = 1.0
+\end{Verbatim}
+\end{center}
+\caption{
+  FITS data structure.
+ }
+\label{fig:data_format}
+\end{figure}
+
 
 % -------------------------------------------
 \subsection{Citations}
