new SNLCINP input MJDPERIOD

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4831,7 +4831,7 @@ to each other:
         $= 0.736324 - 0.7389 = -0.002576=$ {\tt GALZDIF}.
 %
   \item  The original {\tt ZPHOT(HOSTLIB)} can be  computed as \\
-       {\tt ZPHOT(HOSTLIB) = GALZPHOT(SIMGEN\_DUMP) + GALZDIF(SIMGEN\_DUMP)}
+       {\tt ZPHOT(HOSTLIB) = GALZPHOT(SIMGEN\_DUMP) - GALZDIF(SIMGEN\_DUMP)}
 \end{itemize}
 
 
