for HOSTSNFRAC integration, require F_HOST and F_PEAK(SN) to be both be greater than zero

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -5489,7 +5489,10 @@ $\dFlamHost$ is scaled by $\scaleFlamHost$ such that
     \frac{\scaleFlamHost\int d\lam [\dFlamHost]}{ \int d\lam [\dFlamPeak ]}~,
 \end{equation}
 %
-where $\dFlamPeak$ is the SN spectrum at peak brightness.
+where $\dFlamPeak$ is the SN spectrum at peak brightness,
+and the integration is over the spectrograph wavelength range
+in which both $F_{\rm host}$ and $F_{\rm peak}$ are defined.
+
 
 \medskip
 There are two methods to define the template exposure time.
