--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -11873,6 +11873,7 @@ END_EVENT:  <ID1>
      Note that a more accurate strategy is to create a 
      SIMLIB cadence library with the correct RA,DEC distribution
      (and {\tt GENMODEL\_MSKOPT=0}).
+  \item {\tt GENRANGE\_MJD: <MJDmin> <MJDmax>} : select MJD window
 \end{itemize}
 
 % ----------------------------------------------       
