add HOSTLIB_MAXDDLR2 to manual

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4127,6 +4127,7 @@ the sim-input file (or via command-line override):
    HOSTLIB_MXINTFLUX_SNPOS: .97       # default=0.99
    HOSTLIB_SNR_DETECT:   xxx          # default=0 SNR>xxx (see below)
    HOSTLIB_MAXDDLR:      xxx          # default=4 (for host matches)
+   HOSTLIB_MAXDDLR2:     xxx          # default=7 (for HOST_CONFUSION calculation)
    HOSTLIB_SBRADIUS:     xxx          # default=1.2 arcsec
    HOSTLIB_GENRANGE_RA:    xxx yyy    # default= -999 to +999
    HOSTLIB_GENRANGE_DECL:  xxx yyy    # default= -999 to +999)   
