continue haulted development of kcor refactor to translate fortran to C

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -13417,6 +13417,7 @@ Errors and $S/N$ can be fudged in the simulation  as follows:
   FUDGE_ZPTERR: 0.03             # add .03 ZPTERR to all epochs and bands
   FUDGE_ZPTERR_FILTER: g   .01   # add .01 ZPTERR to g-band 
   FUDGE_ZPTERR_FILTER: riz .02   # add .02 ZPTERR to riz bands
+  FUDGE_ZPTERR_FILTER: r,i,z  0.02,0.01,0.005 
 
 # 7. shift filter wavelength 
   FUDGESHIFT_LAM: 10.0                              # add 10 A to all bands
