update HEADER_OVERRIDE section and add section on combining OVERRIDE with REFORMAT

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -7946,7 +7946,7 @@ the file can contain one of two formats:
 For the {\tt FITRES} format, the fit-par columns (PKMJD, x1, c, zHD)
 are automatically used as initial values to the fit.
 Using the uncertainties as a prior requires a code update.
-% .xyz
+
 
 % ------------------------------------
    \subsection{Selecting an Efficiency Map for a Fitting Prior}
@@ -9622,18 +9622,25 @@ for example, to label SNe confirmed by a particular telescope.
 \label{subsec:data_override}
 
 
-\subsubsection{Over-Riding Header Information}
+\subsubsection{Over-Riding Header Information: {\tt HEADER\_OVERRIDE\_FILE} }
 \label{sss:header_override}
 
-Here we describe how to over-ride header information in the
-data files without re-making the data files. This feature
-can be useful, for example, for systematics or optimization studies
+For \snana\ analysis programs 
+({\tt snana.exe}, {\tt snlc\_fit.exe}, {\tt psnid.exe}),
+here we describe how to over-ride header information in the
+data files without re-making the data files.
+This feature is useful to study the impact of data changes
+(e.g., redshifts and host matches) without altering a released
+data set. Beware that this feature is intended only for internal 
+use by analysis teams,
+and should not be part of a publicly released data set;
+see Sec.~\ref{sss:new_data_files} on updating data files with 
+override information.
+
 The header information includes host properties, peculiar
 velocities, redshifts, and Galactic extintion, all of which
-can be easily modified for a particular study. To see a complete
-list of options, search for 
-{\tt VARLIST\_ALL\_HEADER\_OVERRIDE} in {\tt snana.car}.
-
+can be modified for a particular study. 
+To see a complete list of data keys, search any {\tt *HEAD.FITS} data file.
 The input key for the analysis programs is
 \begin{verbatim}
    &SNLCINP
@@ -9642,7 +9649,7 @@ The input key for the analysis programs is
      HEADER_OVERRIDE_FILE = 'myUpdates1.dat,myUpdates2.dat
 
 more myUpdates.dat
-VARNAMES: CID  REDSHIFT_HELIO  REDSHIFT_HELIO_ERR MWEBV
+VARNAMES: CID  REDSHIFT_HELIO  REDSHIFT_HELIO_ERR  MWEBV
 SN:  1346137      0.246  0.001    0.021
 SN:  1346387      0.533  0.0011   0.038
 etc ...
@@ -9656,25 +9663,38 @@ In the first example, three header values are updated:
 helio redshift, the uncertainty, and Galactic extintion.
 For SNe missing from the update file, the original values in the 
 data file header are used. This feature does {\tt NOT} work
-on epoch-dependent quantities.
+on epoch-dependent quantities, but mag and flux corrections can
+be applied as described below in Sec.~\ref{sss:magcor}.
 The second example illustrates a comma-separated list of table files;
 beware that the variables in each file must be unique (except for CID).
 
-The header-override list includes variables that are used later in 
+The header-override list may include variables that are used later in 
 BBC or cosmology fitting, but not used in light curve fitting;
 e.g., host-galaxy properties and peculiar velocity. To avoid 
 losing time re-running identical light curve fits for such variable changes,
 it can be more efficient to make substitutions at the 
-BBC/{\tt SALT2mu.exe} stage using input 
-\vspace{-0.4cm}
+BBC/{\tt SALT2mu.exe} stage using BBC-input 
+\vspace{-0.2cm}
 \begin{verbatim}
     datafile_override=over1.dat,over2.dat,etc
 \end{verbatim}
 Any variable in the input table (see {\tt datafile} arg) can be
 included in an override table.
 For {\tt VPEC} ({\tt VPEC\_ERR}) changes, the Hubble diagram 
-redshift ({\tt zHD}, {\tt zHDERR}) is re-computed by subtracting
+redshift ({\tt zHD}, {\tt zHDERR}) is internally re-computed by subtracting
 the original $\vpec$ and adding the override value.
+To update host matches, make sure to include the following variables
+in the header-override file:
+\vspace{-0.1cm}
+\begin{itemize}[noitemsep]
+   \item All of the {\tt HOSTGAL\_XXX},
+            except for {\tt HOSTGAL\_SB\_FLUXCAL\_[band]} \\
+     (because SB depends on SN coordinates rather than host-match)
+   \item All of the {\tt HOSTGAL2\_XXX}
+   \item {\tt REDSHIFT\_HELIO} and {\tt REDSHIFT\_HELIO\_ERR}
+   \item {\tt REDSHIFT\_FINAL} and {\tt REDSHIFT\_FINAL\_ERR}
+   \item possibly {\tt VPEC}
+\end{itemize}
 
 % ------------
 \clearpage
@@ -9736,16 +9756,32 @@ the corrections can be removed with
 where the minus sign in front is a command to subtract.
 This subtract option works only with the {\tt VERSION\_ADD} key.
 
-\medskip
+% xxxxx removed Dec 29 2022 xxxxxxxx
+%\medskip
+%Since these correction typically require an SED, the SALT2-fitted 
+%model SED can be extracted for each epoch and stored in a 
+%ROOT file with
+%\begin{verbatim}
+%  SNTABLE_LIST = 'MODELSPEC'
+%\end{verbatim}
+%and see \S\ref{subsec:anavar} for details.
+% xxxxxxxxxxxxxxxx
 
-Since these correction typically require an SED, the SALT2-fitted 
-model SED can be extracted for each epoch and stored in a 
-ROOT file with
-\begin{verbatim}
-  SNTABLE_LIST = 'MODELSPEC'
-\end{verbatim}
-and see \S\ref{subsec:anavar} for details.
-% 
+% - - - - - - - - 
+\subsubsection{Create New Data Files with {\tt OVERRIDE} Updates}
+\label{sss:new_data_files}
+
+While the data override features in 
+\S~\ref{sss:header_override} and \S~\ref{sss:magcor}
+are useful for quick testing, it is not always practical to 
+analyze data with multiple sets of data-override files,
+and public data releases should never use this feature.
+To update data files with the override information,
+use the OVERRIDE feature(s) above and also
+use the {\tt REFORMAT} feature in \S\ref{sss:text2fits}.
+Although reformatting is typically for translating TEXT to FITS
+(and vice-versa), it preserves the override values and
+it works for TEXT$\to$TEXT and FITS$\to$FITS. 
 
 % ------------------------------------------------
 \subsection{Peculiar Velocity Corrections }
